--- a/public/css/single-post.css
+++ b/public/css/single-post.css
@@ -13,7 +13,9 @@ body{
 }
 
 .main-nav h3{
-    padding-top: 15px;
+    float: left;
+    margin-left: 20px;
+
     color: black;
 }
 
@@ -31,33 +33,40 @@ a{
 }
 
 .single-post-desc{
-    width: 40%;
+    width: 50%;
     height: auto;
-    float: right;
+    float: left;
     margin-top: 60px;
-    margin-right: 60px;
     text-align: center;
     
 }
 
-#single-title h3{ 
+#single-title h2{ 
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 52px;
+}
+
+#single-brand {
+    font-size: 20px;
 }
 
 #single-body{
     margin-top: 10px; 
 }
 
+#user_show {
+    font-size: 18px;    
+}
+
 .single-img-container{
     width: 40%;
     height: auto;
     float: left;
-    margin-top: 60px;
-    margin-left: 30px; 
-    border: 2px solid black;
+    margin-left: 30px;
+    margin-top: 30px; 
 }
 
 img{
-    width: 100%;
+    width: auto;
+    height: 90%;
 }
