--- a/public/css/single-post.css
+++ b/public/css/single-post.css
@@ -55,9 +55,45 @@ a{
     float: left;
     margin-top: 60px;
     margin-left: 30px; 
-    border: 2px solid black;
+    border: 2px solid rgb(212, 212, 250);
 }
 
 img{
     width: 100%;
+}
+
+.comments{
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+}
+
+textarea{
+    width: 40%;
+    height: 120px;
+    margin-top: 20px;
+    border-radius: 3px;
+    border: 2px solid black;
+}
+
+.add-comment{
+    margin: 0 auto;
+}
+
+.comment-box{
+    width: 100%;
+    height: auto;
+    padding-top: 3px;
+    padding-left: 20px;
+    margin-top: 10px; 
+    background-color: lavender;
+    border-radius: 5px;
+}
+
+.comment-body{
+    font-size: 1px;
+}
+
+.comment-date{
+    font-size: 14px;
 }
